--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
-    "firebase": "^10.3.1",
     "@srexi/purecounterjs": "^1.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
+    "firebase": "^10.3.1",
     "fontawesome-free": "^1.0.4",
     "glightbox": "^3.2.0",
+    "isotope-layout": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
