--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "isotope-layout": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.15.0",
     "swiper": "^10.2.0"
   },
